Heroku HTML Modification

--- a/app/src/main/resources/templates/compute.mustache
+++ b/app/src/main/resources/templates/compute.mustache
@@ -1,10 +1,11 @@
-<title>My application</title>
-  <h1>Hello, World! Text for automatic deploy test</h1>
+<title>Prefix Detection With Trie Data Structure</title>
+  <h1>Description Here</h1>
     Result is {{result}}
 
 
   <form action="compute" method="post">
         <textarea name="input1" rows="10" cols="30"></textarea>
+        <textarea name="input2" rows="10" cols="30"></textarea>
         <textarea name="input2" rows="10" cols="30"></textarea>
         <br>
         <input type="submit">
